fix lỗi chỉnh sửa lượt khám

--- a/src/main/resources/templates/transaction/edit/index.html
+++ b/src/main/resources/templates/transaction/edit/index.html
@@ -113,7 +113,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                 <div class="typeahead">
                                                     <input type="text" class="form-control" dir="ltr"
                                                         placeholder="Nhập tên gợi nhớ của bệnh nhân" 
-                                                        readonly id="cusName">
+                                                        id="cusName">
                                                 </div>
                                             </div>
                                             <div class="col-lg-6">
@@ -165,7 +165,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                 onclick="window.location.href = '/tran-a-day'"><span>Quay lại</span>
                                             </a>
                                             <button class="btn btn-success" style="margin-left: 0.5em;"
-                                                id="btnAddTran">Thêm mới</button>
+                                                id="btnAddTran">Lưu</button>
 
                                         </div>
                                     </div>
