--- a/src/main/resources/templates/export/index.html
+++ b/src/main/resources/templates/export/index.html
@@ -122,6 +122,25 @@ License: You must have a valid license purchased only from themeforest(the above
                                         </div>
                                     </div>
 
+                                    <div class="kt-portlet__head">
+                                        <div class="kt-portlet__head-label">
+                                            <h3 class="kt-portlet__head-title">
+                                                Nhập dữ liệu từ file excel
+                                            </h3>
+                                        </div>
+
+                                    </div>
+                                    <div class="form-group row" style="margin-top: 20px;">
+                                        <div class="col-lg-4 col-md-9 col-sm-12">
+                                            <div class="dropzone dropzone-default dropzone-success" id="importExcel">
+                                                <div class="dropzone-msg dz-message needsclick">
+                                                    <h3 class="dropzone-msg-title">Drop files here or click to upload.</h3>
+                                                    <span class="dropzone-msg-desc">Lưu ý: chỉ sử dụng file excel</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
                                 </div>
                             </div>
                         </div>
