--- a/src/main/resources/templates/export/index.html
+++ b/src/main/resources/templates/export/index.html
@@ -19,7 +19,7 @@ License: You must have a valid license purchased only from themeforest(the above
 <head>
     <base href="../../">
     <meta charset="utf-8"/>
-    <title>Xuất dữ liệu ra Excel</title>
+    <title>Nhập/Xuất dữ liệu</title>
     <meta name="description" content="Xuất dữ liệu ra Excel">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -131,13 +131,18 @@ License: You must have a valid license purchased only from themeforest(the above
 
                                     </div>
                                     <div class="form-group row" style="margin-top: 20px;">
-                                        <div class="col-lg-4 col-md-9 col-sm-12">
+                                        <div class="col-lg-8 col-md-9 col-sm-12">
                                             <div class="dropzone dropzone-default dropzone-success" id="importExcel">
                                                 <div class="dropzone-msg dz-message needsclick">
                                                     <h3 class="dropzone-msg-title">Drop files here or click to upload.</h3>
                                                     <span class="dropzone-msg-desc">Lưu ý: chỉ sử dụng file excel</span>
                                                 </div>
                                             </div>
+                                        </div>
+                                        <div class="form-group col-lg-3" style="display: flex; align-items: center;">
+                                            <button class="btn btn-primary" id="btn_upload">
+                                                <i class="fa fa-upload" aria-hidden="true"></i>Tải lên
+                                            </button>
                                         </div>
                                     </div>
 
