fix bug color + money format

--- a/src/main/resources/templates/dashboard/index_func.html
+++ b/src/main/resources/templates/dashboard/index_func.html
@@ -28,7 +28,7 @@
                         ,
                         backgroundColor: [
                             "#34bfa3",
-                            "#fd3995",
+                            "#ffb822",
                             "#5d78ff"
                         ]
                     }],
