--- a/src/main/resources/templates/procedure/index.html
+++ b/src/main/resources/templates/procedure/index.html
@@ -182,7 +182,7 @@ License: You must have a valid license purchased only from themeforest(the above
                 </div>
                 <div class="row col-lg-12">
                     <label>Đơn giá</label>
-                    <input type="number" class="form-control material-input"
+                    <input type="text" class="form-control material-input money-input"
                            id="proMoney">
                 </div>
                 <div class="row col-lg-12">
@@ -249,6 +249,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 <script src="assets/js/pages/crud/datatables/basic/paginations.js" type="text/javascript"></script>
 <script src="assets/js/common.js" type="text/javascript"></script>
+<script src="assets/js/thousand_separator.js" type="text/javascript"></script>
 <!--end::Page Scripts -->
 </body>
 
