--- a/src/main/resources/templates/transaction/detail.html
+++ b/src/main/resources/templates/transaction/detail.html
@@ -94,12 +94,13 @@
                 var item = list_spend[i - 1];
                 var mon = item.money.toLocaleString().replaceAll(',', '.');
                 var countNumber = /*Number.parseInt(paginData['offset'] * paginData['limit'])*/ +i;
+                var note = item.note || ""
                 html += '<tr>'
                     + '<td class="text-left">' + countNumber + '</td>'
                     + '<td>' + item.name + '</td>'
                     + '<td>' + item.detail + '</td>'
                     + '<td>' + mon + '</td>'
-                    + '<td>' + item.note + '</td>'
+                    + '<td>' + note + '</td>'
                     + '<td>' + '<div style="text-align: center; vertical-align: middle;">' +
                     '<button type="button" data-toggle="modal" class="btn btn-circle btn-icon edit-spend" style="margin-right: 0.5rem;"' +
                     ' href="#kt_select2_modal" data-index="' + (i - 1) + '"><i class="flaticon-edit"></i></button>' +
