--- a/src/main/resources/templates/metronic/index.html
+++ b/src/main/resources/templates/metronic/index.html
@@ -54,7 +54,7 @@ License: You must have a valid license purchased only from themeforest(the above
 	<body class="kt-quick-panel--right kt-demo-panel--right kt-offcanvas-panel--right kt-header--fixed kt-header-mobile--fixed kt-subheader--enabled kt-subheader--fixed kt-subheader--solid kt-aside--enabled kt-aside--fixed kt-page--loading">
 
 		<?php include("layout.php"); ?>
-		<div data-th-replace="layout"></div>
+		<div data-th-replace="metronic/layout"></div>
 <!--		<h1>ahmed</h1>-->
 
 		<!-- begin::Global Config(global config for global JS sciprts) -->
