--- a/src/main/resources/templates/metronic/partials/_aside/_brand.html
+++ b/src/main/resources/templates/metronic/partials/_aside/_brand.html
@@ -2,7 +2,7 @@
 <!-- begin:: Aside -->
 <div class="kt-aside__brand kt-grid__item " id="kt_aside_brand">
 	<div class="kt-aside__brand-logo">
-		<a href="https://www.facebook.com/thoanduong68">
+		<a href="index.html">
 			<img alt="Logo" src="assets/media/logos/logo-light.png" />
 		</a>
 	</div>
