--- a/src/main/resources/templates/metronic/layout.html
+++ b/src/main/resources/templates/metronic/layout.html
@@ -12,7 +12,7 @@
 
 		<!--[html-partial:include:{"file":"partials/_aside/base.html"}]/-->
 <!--		<?php include("partials/_aside/base.php");?>-->
-		<!-- <div data-th-replace="partials/_aside/base"></div> -->
+		<div data-th-replace="metronic/partials/_aside/base"></div>
 		<div class="kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor kt-wrapper" id="kt_wrapper">
 
 			<!--[html-partial:include:{"file":"partials/_header/base.html"}]/-->
