--- a/src/main/resources/templates/metronic/partials/_header/base.html
+++ b/src/main/resources/templates/metronic/partials/_header/base.html
@@ -4,11 +4,11 @@
 
 	<!--[html-partial:include:{"file":"partials/_header/_menu.html"}]/-->
 <!--	<?php include("partials/_header/_menu.php");?>-->
-	<div data-th-replace="metronic/partials/_header/_menu"></div>
+	<div data-th-replace="partials/_header/_menu"></div>
 
 	<!--[html-partial:include:{"file":"partials/_header/topbar/_base.html"}]/-->
 <!--	<?php include("partials/_header/topbar/_base.php");?>-->
-	<div data-th-replace="metronic/partials/_header/topbar/_base"></div>
+	<div data-th-replace="partials/_header/topbar/_base"></div>
 	
 </div>
 
