lịch sử nợ của bệnh nhân

--- a/src/main/resources/templates/dashboard/index.html
+++ b/src/main/resources/templates/dashboard/index.html
@@ -91,7 +91,7 @@ License: You must have a valid license purchased only from themeforest(the above
                         <div class="kt-widget14">
                             <div class="kt-widget14__header">
                                 <h3 class="kt-widget14__title">
-                                    Khách hàng
+                                    Thống kê bệnh nhân
                                 </h3>
                                 <span class="kt-widget14__desc">
 							Tình trạng thanh toán
