add money format

--- a/src/main/resources/templates/transaction/create/index.html
+++ b/src/main/resources/templates/transaction/create/index.html
@@ -210,7 +210,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                 Thang
                                             </td>
                                             <td>
-                                                <input type="number" class="form-control material-input" id="priceThang"
+                                                <input type="text" class="form-control material-input money-input" id="priceThang"
                                                     value="0">
                                             </td>
                                         </tr>
@@ -223,7 +223,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                 Lọ
                                             </td>
                                             <td>
-                                                <input type="number" class="form-control material-input" id="priceLo"
+                                                <input type="text" class="form-control material-input money-input" id="priceLo"
                                                     value="0">
                                             </td>
                                         </tr>
