--- a/src/main/resources/templates/transaction/edit/index.html
+++ b/src/main/resources/templates/transaction/edit/index.html
@@ -209,7 +209,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                 Thang
                                             </td>
                                             <td>
-                                                <input type="number" class="form-control material-input" id="priceThang"
+                                                <input type="text" class="form-control material-input" id="priceThang"
                                                     value="0">
                                             </td>
                                         </tr>
@@ -222,7 +222,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                 Lọ
                                             </td>
                                             <td>
-                                                <input type="number" class="form-control material-input" id="priceLo"
+                                                <input type="text" class="form-control material-input" id="priceLo"
                                                     value="0">
                                             </td>
                                         </tr>
