--- a/src/main/resources/templates/transaction/tran-a-day.html
+++ b/src/main/resources/templates/transaction/tran-a-day.html
@@ -287,7 +287,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                 </div>
                                 <div class="col-lg-6">
                                     <label>Số tiền</label>
-                                    <input type="number" class="form-control material-input"
+                                    <input type="text" class="form-control material-input money-input"
                                            id="spend_money">
                                 </div>
                             </div>
@@ -371,6 +371,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 <script src="assets/js/pages/crud/datatables/basic/paginations.js" type="text/javascript"></script>
 <script src="assets/js/common.js" type="text/javascript"></script>
+<script src="assets/js/thousand_spearator.js" type="text/javascript"></script>
 <script src="assets/js/pages/crud/forms/validation/form-widgets.js" type="text/javascript"></script>
 
 <!--end::Page Scripts -->
