--- a/src/main/resources/templates/partials/_aside/_menu.html
+++ b/src/main/resources/templates/partials/_aside/_menu.html
@@ -3,7 +3,7 @@
     <div id="kt_aside_menu" class="kt-aside-menu " data-ktmenu-vertical="1" data-ktmenu-scroll="1"
          data-ktmenu-dropdown-timeout="500">
         <ul class="kt-menu__nav ">
-            <li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="/"
+            <li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="/home"
                                                                                      class="kt-menu__link "><span
                     class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg"
                                                     xmlns:xlink="http://www.w3.org/1999/xlink" width="24px"
