--- a/src/main/resources/templates/transaction/edit/index_func.html
+++ b/src/main/resources/templates/transaction/edit/index_func.html
@@ -72,6 +72,7 @@
                 }
                 expProcMoney += value * listProcedure[index].price;
             })
+            console.log(expProcMoney);
             $('#cusPros').val(pros.join(' + '));
             $('#kt_select2_modal').modal('hide');
         }
